plots in separate folder

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,17 @@
   publisher={Elsevier}
 }
 
+@article{gentleman1994maximum,
+  title={Maximum likelihood for interval censored data: {Consistency} and computation},
+  author={Gentleman, Robert and Geyer, Charles J},
+  journal={Biometrika},
+  volume={81},
+  number={3},
+  pages={618--623},
+  year={1994},
+  publisher={Oxford University Press}
+}
+
 @article{balasubramanian2003estimation,
   title={Estimation of a failure time distribution based on imperfect diagnostic tests},
   author={Balasubramanian, Raji and Lagakos, Stephen W},
@@ -20,6 +31,18 @@
   publisher={Oxford University Press}
 }
 
+@article{tsiatis2004joint,
+title={Joint modeling of longitudinal and time-to-event data: an overview},
+author={Tsiatis, Anastasios A and Davidian, Marie},
+journal={Statistica Sinica},
+volume={14},
+number={3},
+pages={809--834},
+year={2004},
+publisher={Institute of Statistical Science, Academia Sinica}
+}
+
+
 @article{ankerst2015precision,
   title={Precision medicine in active surveillance for prostate cancer: development of the canary--early detection research network active surveillance biopsy risk calculator},
   author={Ankerst, Donna P and Xia, Jing and Thompson Jr, Ian M and Hoefler, Josef and Newcomb, Lisa F and Brooks, James D and Carroll, Peter R and Ellis, William J and Gleave, Martin E and Lance, Raymond S and others},
@@ -29,6 +52,17 @@
   pages={1083--1088},
   year={2015},
   publisher={Elsevier}
+}
+
+@article{pearson1994mixed,
+  title={Mixed-effects regression models for studying the natural history of prostate disease},
+  author={Pearson, Jay D and Morrell, Christopher H and Landis, Patricia K and Carter, H Ballentine and Brant, Larry J},
+  journal={Statistics in Medicine},
+  volume={13},
+  number={5-7},
+  pages={587--601},
+  year={1994},
+  publisher={Wiley Online Library}
 }
 
 @article{laird1982random,
@@ -114,6 +148,37 @@ isbn = {9781439872864}
   pages={64--69},
   year={2003},
   publisher={Elsevier}
+}
+
+@article{eilers1996flexible,
+title={Flexible smoothing with {B-splines} and penalties},
+author={Eilers, Paul HC and Marx, Brian D},
+journal={Statistical Science},
+pages={89--121},
+year={1996},
+volume={11},
+number={2},
+publisher={Institute of Mathematical Statistics}
+}
+
+@book{de1978practical,
+  title={A practical guide to splines},
+  author={De Boor, Carl},
+  volume={27},
+  year={1978},
+  publisher={Springer-Verlag New York}
+}
+
+
+@article{lin2000latent,
+  title={A latent class mixed model for analysing biomarker trajectories with irregularly scheduled observations},
+  author={Lin, Haiqun and McCulloch, Charles E and Turnbull, Bruce W and Slate, Elizabeth H and Clark, Larry C},
+  journal={Statistics in Medicine},
+  volume={19},
+  number={10},
+  pages={1303--1318},
+  year={2000},
+  publisher={Wiley Online Library}
 }
 
 @article{loeb2014heterogeneity,
