added more demo patients

--- a/report/clinical/mainmatter/stat_analysis.tex
+++ b/report/clinical/mainmatter/stat_analysis.tex
@@ -15,7 +15,7 @@ The parameters of the two sub-models were estimated jointly using the R package 
 \subsection{Assessment of Predictions of GS7}
 We validated the predictions of GS7 internally within the PRIAS dataset, as well as externally in five of the largest AS cohorts part of the GAP3 database \citep{gap3_2018}. To this end, we utilized the area under the receiver operating characteristic curve or AUC \cite{rizopoulos2017dynamic} as a measure of discrimination, and root mean squared prediction error or RMSPE \cite{rizopoulos2017dynamic} as a measure of calibration. Since AS studies are longitudinal in nature, we computed AUC and RMSPE in a time dependent manner, at a gap of every one year until xx years of follow-up (95\% quantile of observed GS7 times).
 
-\subsection{Estimate Risk of GS7 and Consequences of Biopsies}
+\subsection{Personalized Schedule of Biopsies, and Its Consequences}
 Consider a new patient P shown in Figure ... Using the joint model fitted to the PRIAS dataset, we obtained his cumulative risk of GS7 over the entire follow-up period. A biopsy at his current visit may be suggested if the cumulative risk of GS7 at the current visit is above a certain threshold (e.g., 10\% risk). By repeatedly applying the 10\% threshold rule over the whole follow-up, we obtained his personalized schedule of biopsies. Similar schedules can be made with another risk threshold. These schedule are not fixed but are rather updated at each follow-up visit based on newly gathered patient data. 
 
 To assist patients in making an informed choice for a schedule, be it personalized or fixed, we provided them patient-specific consequences of following each schedule. To this end, we first calculated the probability of occurrence of GS7 between successive biopsies of each schedule. Using these probabilities we then obtained the expected delay in detection of GS7 for following that schedule. Thus, patients have a method to compare across various schedules in terms of the personalized burden (time and total biopsies), and personalized benefit (less delay in detection of GS7 is beneficial). Lastly, we implemented this approach in a web-application.
