--- a/report/clinical/supplementary.tex
+++ b/report/clinical/supplementary.tex
@@ -95,6 +95,8 @@
 \clearpage
 \input{supplementary/biopsy_scheduling}
 \clearpage
+\input{supplementary/webapp}
+\clearpage
 \input{supplementary/source_code}
 \clearpage
 
